@@ -36,6 +36,9 @@
 - All the 'Sint16()' type conversion looks crappy (might change if we don't uses
   SDL anymore and its SDL_Rect)
 - Uses bounding sphere instead of bounding box
+- Makes every *time related* stuff synchronised on frame (network preparation)
+- Allow units to stick buildings (some tiles are only partially inaccessible)
+- Permits diagonal move in pathfinding
 ===============================================================================
 
 
@@ -48,4 +51,6 @@
 - When unit pop-up after training or building, find a suitable location (with no collision)
 - Ignore units behind HUD during 'selection mode'
 - When starting pos of selection square is out of screen, some bar should be truncated
+- Makes clicking on building works again
+- Right clicking multiple times makes unit to step back
 ===============================================================================
