@@ -81,14 +81,51 @@ void World::AddUnit(Unit* parUnit)
 	{
 		for (size_t y = (bbox.y / MAP_TILE_SIZE); y < ((bbox.y + bbox.h) / MAP_TILE_SIZE); ++y)
 		{
+			// FIXME: Bound checking (security warning)
 			assert(accessibleTile_[x][y]);
 			accessibleTile_[x][y] = false;
 		}
 	}
 
-#if 0
+#if 1
 	DumpAccessibleTile_();
 #endif
+}
+
+// ============================================================================
+
+void World::RemoveUnit(Unit* parUnit)
+{
+	assert(parUnit);
+
+	fprintf(stdout, "[WORLD] Removing unit\n");
+
+	if (parUnit->IsBeingConstructed())
+	{
+		Unit* builder = BuilderOf(parUnit);
+		builder->CancelOrder();
+	}
+
+	if (!parUnit->CanMove())
+	{
+		SDL_Rect bbox = parUnit->BoundingBox();
+		for (size_t x = (bbox.x / MAP_TILE_SIZE); x < ((bbox.x + bbox.w) / MAP_TILE_SIZE); ++x)
+		{
+			for (size_t y = (bbox.y / MAP_TILE_SIZE); y < ((bbox.y + bbox.h) / MAP_TILE_SIZE); ++y)
+			{
+				// FIXME: Bound checking (security warning)
+				assert(!accessibleTile_[x][y]);
+				accessibleTile_[x][y] = true;
+			}
+		}
+	}
+
+#if 1
+	DumpAccessibleTile_();
+#endif
+
+	units_.erase(std::find(units_.begin(), units_.end(), parUnit));
+	delete parUnit;
 }
 
 // ============================================================================
@@ -102,21 +139,6 @@ void World::DumpAccessibleTile_() const
 			fprintf(stdout, "%d", accessibleTile_[x][y] ? 0 : 1);
 		fprintf(stdout, "\n");
 	}
-}
-
-// ============================================================================
-
-void World::RemoveUnit(Unit* parUnit)
-{
-	if (parUnit->IsBeingConstructed())
-	{
-		Unit* builder = BuilderOf(parUnit);
-		builder->CancelOrder();
-	}
-
-	units_.erase(std::find(units_.begin(), units_.end(), parUnit));
-
-	delete parUnit;
 }
 
 // ============================================================================
@@ -193,6 +215,30 @@ bool World::Collides(const Unit* parUnit, SDL_Rect& parDst) const
 	}
 
 	return false;
+}
+
+// ============================================================================
+
+bool World::IsTileAccessible(const int2& parTilePos, const int2& parDimensions) const
+{
+	assert(parTilePos.x >= 0 && parTilePos.x < int(width_));
+	assert(parTilePos.y >= 0 && parTilePos.y < int(height_));
+
+	if (!accessibleTile_[parTilePos.x][parTilePos.y])
+		return false;
+
+	const int2& minTile = int2(
+		parTilePos.x - (parDimensions.w / MAP_TILE_SIZE),
+		parTilePos.y - (parDimensions.h / MAP_TILE_SIZE));
+	const int2& maxTile = int2(
+		parTilePos.x + (parDimensions.w / MAP_TILE_SIZE),
+		parTilePos.y + (parDimensions.h / MAP_TILE_SIZE));
+	for (int x = minTile.x; x <= maxTile.x; ++x)
+		for (int y = minTile.y; y <= maxTile.y; ++y)
+			if (x < 0 || x >= int(width_) || y < 0 || y >= int(height_) || !accessibleTile_[x][y])
+				return false;
+
+	return true;
 }
 
 // ============================================================================
