@@ -7,6 +7,7 @@
 - States like "move/holdingGold" are Unit attributes
 - Rename EOrder to ECommand
 - New class "WorkerUnit" (inherit from Unit)
+- Basic pathfinding implementation (with Breadth First Search)
 ===============================================================================
 
 ===============================================================================
